tests/invalid/out_of_scope_do_while.c
int main() {
    do {
        int a = 2;
    } while (a);
    return 0;
}
// ERROR: Line 4, Error 3001